--- a/css/svg.css
+++ b/css/svg.css
@@ -1,3 +1,5 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto+Slab&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Akronim&family=Open+Sans&display=swap');
 
@@ -8,8 +10,8 @@ html.sr .load-hidden {
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 h2, h1, span {
@@ -45,41 +47,102 @@ body {
 #section1 {
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient();
+    
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     overflow: hidden;
 }
 
 .header-box{
+    z-index: 300;
     position: absolute;
-    align-self: center;
-    justify-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    top: 20%;
+}
+
+#section1 .foreground {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+    width: 100%;
+    height: 100vh;
+    z-index: 400;
+}
+
+.up {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    overflow: hidden;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    background-image: url(../img/background.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 #section1 svg {
-    width: 100%;
+    position: absolute;
     height: 100vh;
-    z-index: -30;
+    width: 100%;
 }
 
 #section2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .textbox {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-self: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     width: 80%;
     text-align: center;
 }
 
 .textbox h2 {
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     width: 100%;
     border: 5px solid #ff837f;
     border-radius: 5px;
@@ -88,21 +151,30 @@ body {
 #section3 {
     width: 100%;
     height: 70vh;
-    clip-path: polygon(0 0, 100% 38%, 100% 100%, 0% 100%);
+    -webkit-clip-path: polygon(0 0, 100% 38%, 100% 100%, 0% 100%);
+            clip-path: polygon(0 0, 100% 38%, 100% 100%, 0% 100%);
     margin: 5vh auto;
 }
 
 #section3 .sunset {
     width: 100%;
     height: 70vh;
-    object-fit: cover;
-    object-position: center;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
 }
 
 .data-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .data-item svg {
@@ -120,10 +192,19 @@ body {
 }
 
 .bullets {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .bullet-points {
@@ -134,7 +215,11 @@ body {
     margin: 5vh auto;
     position: relative;
     cursor: pointer;
+    -webkit-transition: -webkit-transform .2s ease-out;
+    transition: -webkit-transform .2s ease-out;
+    -o-transition: transform .2s ease-out;
     transition: transform .2s ease-out;
+    transition: transform .2s ease-out, -webkit-transform .2s ease-out;
 }
 
 section:not(#section1, #section6){
@@ -143,10 +228,16 @@ section:not(#section1, #section6){
 
 #section6{
     background-color: #ff837f;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 50vh;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 #section6 h1{
@@ -162,13 +253,21 @@ section:not(#section1, #section6){
     background-color: #ff837f;
     position: absolute;
     top: -20px;
+    -webkit-transition: background-color .2s ease-out;
+    -o-transition: background-color .2s ease-out;
     transition: background-color .2s ease-out;
 }
 
 h2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 h2 span {
@@ -177,36 +276,69 @@ h2 span {
 }
 
 .span1 {
-    align-self: flex-start;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
 }
 
 .span2 {
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
 }
 
 .span3 {
-    align-self: flex-end;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
 }
 
-#clouds{
-    animation: cloud linear 18s infinite;
+#section1 .clouds{
+    -webkit-animation: cloud linear 18s infinite;
+            animation: cloud linear 18s infinite;
     opacity: 0.7;
+}
+
+
+@-webkit-keyframes cloud {
+    0% {
+        -webkit-transform: translateX(-100%);
+                transform: translateX(-100%);
+    }
+
+    100%{
+        -webkit-transform: translateX(100%);
+                transform: translateX(100%);
+    }
 }
 
 
 @keyframes cloud {
     0% {
-        transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);
+                transform: translateX(-100%);
     }
 
     100%{
-        transform: translateX(100%);
+        -webkit-transform: translateX(100%);
+                transform: translateX(100%);
     }
 }
 
 @media (min-width:540px) {
     .header-box h1 {
         letter-spacing: 10px;
+    }
+
+    .header-box {
+        top: 40%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     h1, h2, span {
@@ -217,12 +349,25 @@ h2 span {
 
 @media (min-width:768px) {
     #section5 {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+    }
+
+    .header-box h1 {
+        letter-spacing: 5px;
     }
     .bullets {
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
         width: 80%;
     }
 
@@ -244,7 +389,9 @@ h2 span {
     .bullet-points:hover{
         background-color: #ff837f;
         color: #040220;
-        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+            -ms-transform: scale(1.1);
+                transform: scale(1.1);
     }
 
     .bullet-points:hover h3 {
@@ -263,5 +410,4 @@ h2 span {
 
 
 }
-
 
